correction de l'alignement du titre des articles associés sur l'image de ce même article.

--- a/content/themes/obergine/app/scss/base/_bases.scss
+++ b/content/themes/obergine/app/scss/base/_bases.scss
@@ -78,3 +78,11 @@ main {
 
     }
 }
+
+// alignement du titre des articles associés sur l'image.
+
+.main__container__article__container__content__text {
+    padding-left: $gutter-smale;
+        
+    
+}
